finished section 3 by changing author name length, fonts, and margins/padding to get elements in proper spots

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div id="section-3">
         <div class="quote-block">“We cannot alter objective facts. But subjective interpretations can be altered as much as one likes. And we are inhabitants of a subjective world.”</div>
-        <div class="author">― Ichiro Kishimi, The Courage to Be Disliked: The Japanese Phenomenon That Shows You How to Change Your Life and Achieve Real Happiness</div>
+        <div class="author">― Ichiro Kishimi, The Courage to Be Disliked</div>
     </div>
 
     <div id="section-4">
