Project finished. See README.md for full details.

--- a/index.html
+++ b/index.html
@@ -67,16 +67,15 @@
 
     <div id="section-4">
         <div class="container">
-            <div class="text">Start earning rewards! Don't miss out!</div>
-            <div class="subtext">Sign up to start earning reward points toward your next purchase by clicking this button!</div>
-            <div class="button-2">
-                <button>Sign Up</button>
-            </div>
+            <div class="reward-text">Start earning rewards! Don't miss out!</div>
+            
+        <div class="reward-subtext">Sign up to start earning reward points toward your next purchase by clicking this button!</div>
+            <button class="reward-button button-2">Sign Up</button>
         </div>
     </div>
 
     <div id="footer">
-        <div class="footer-text">Template by The Odin Project 2021. Images credited in README.md</div>
+        <div class="footer-text">Template by The Odin Project 2021 ©. Images credited in README.md</div>
     </div>
 </body>
 </html>
